[gd_scene load_steps=10 format=3 uid="uid://ds7edlpr7726q"]

[ext_resource type="Script" path="res://scripts/small_blue_enemy.gd" id="1_3jrua"]
[ext_resource type="Texture2D" uid="uid://bga0q1vuo7k3i" path="res://assets/Character_Tilemap/tilemap-characters_packed.png" id="1_e3mj0"]
[ext_resource type="PackedScene" uid="uid://c1ts1ck6u4wya" path="res://scenes/killzone.tscn" id="2_2tb66"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dkml5"]
atlas = ExtResource("1_e3mj0")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_84o8q"]
atlas = ExtResource("1_e3mj0")
region = Rect2(24, 48, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_g2jg2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkml5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84o8q")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_grbt1"]
size = Vector2(17, 6.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wxgm6"]
size = Vector2(15, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6vio4"]
size = Vector2(208, 44)

[node name="small_blue_enemy" type="Node2D"]
z_index = 1
position = Vector2(0, -4)
script = ExtResource("1_3jrua")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_g2jg2")
autoplay = "default"
frame_progress = 0.603717

[node name="Killzone" parent="." instance=ExtResource("2_2tb66")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0.5, 8.25)
shape = SubResource("RectangleShape2D_grbt1")

[node name="HitBox" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0.5, 1.5)
shape = SubResource("RectangleShape2D_wxgm6")

[node name="RayCastLeft" type="RayCast2D" parent="HitBox"]
position = Vector2(0, 4)
target_position = Vector2(-14, 0)

[node name="RayCastRight" type="RayCast2D" parent="HitBox"]
position = Vector2(0, 4)
target_position = Vector2(15, 0)

[node name="DetectPlayer" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_6vio4")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="body_entered" from="DetectPlayer" to="." method="_on_detect_player_body_entered"]
[connection signal="body_exited" from="DetectPlayer" to="." method="_on_detect_player_body_exited"]
